Use the word "three" as appropriate.

--- a/tex/p031.tex
+++ b/tex/p031.tex
@@ -74,7 +74,7 @@
 \vs p031 9:8 \ublistelem{6.}\bibnobreakspace \bibemph{The Tertiary Space Level.} This sixth group of Master Architects numbers 3,430, and we likewise infer that they may be occupied with the gigantic plans for the third universe of outer space.
 \vs p031 9:9 \ublistelem{7.}\bibnobreakspace \bibemph{The Quartan Space Level.} This, the final and largest corps, consists of 24,010 Master Architects, and if our former conjectures are valid, it must be related to the fourth and last of the ever\hyp{}increasing\hyp{}sized universes of outer space.
 \vs p031 9:10 \pc These seven groups of Master Architects total 28,011 universe planners. On Paradise there is a tradition that far back in eternity there was attempted the eventuation of the 28,012\ts{th} Master Architect, but that this being failed to absonitize, experiencing personality seizure by the Universal Absolute. It is possible that the ascending series of the Master Architects attained the limit of absonity in the 28,011\ts{th} Architect, and that the 28,012\ts{th} attempt encountered the mathematical level of the presence of the Absolute. In other words, at the 28,012\ts{th} eventuation level the quality of absonity equivalated to the level of the Universal and attained the value of the Absolute.
-\vs p031 9:11 \pc In their functional organization the three supervising Architects of Havona act as associate assistants to the solitary Paradise Architect. The seven Architects of the superuniverses act as co\hyp{}ordinates of the 3 supervisors of Havona. The 70 planners of the universes of the primary outer space level are at present serving as associate assistants to the seven Architects of the seven superuniverses.
+\vs p031 9:11 \pc In their functional organization the three supervising Architects of Havona act as associate assistants to the solitary Paradise Architect. The seven Architects of the superuniverses act as co\hyp{}ordinates of the three supervisors of Havona. The 70 planners of the universes of the primary outer space level are at present serving as associate assistants to the seven Architects of the seven superuniverses.
 \vs p031 9:12 The Architects of the Master Universe have at their disposal numerous groups of assistants and helpers, including two vast orders of force organizers, the primary eventuated and the associate transcendental. These Master Force Organizers are not to be confused with the power directors, who are germane to the grand universe.
 \vs p031 9:13 All beings produced by the union of the children of time and eternity, such as the trinitized offspring of the finaliters and the Paradise Citizens, become wards of the Master Architects. But of all other creatures or entities revealed as functioning in the present organized universes, only Solitary Messengers and Inspired Trinity Spirits maintain any organic association with the Transcendentalers and the Architects of the Master Universe.
 \vs p031 9:14 The Master Architects contribute technical approval of the assignment of the Creator Sons to their space sites for the organization of the local universes. There is a very close association between the Master Architects and the Paradise Creator Sons, and while this relationship is unrevealed, you have been informed of the association of the Architects and the grand universe Supreme Creators in the relationship of the first experiential Trinity. These two groups, together with the evolving and experiential Supreme Being, constitute the Trinity Ultimate of transcendental values and master universe meanings.
