--- a/tex/p048.tex
+++ b/tex/p048.tex
@@ -92,7 +92,7 @@
 \vs p048 5:3 There are billions upon billions of these teachers in Satania, and their numbers constantly increase because, in the majority of instances, when a seraphim proceeds inward with an Adjuster\hyp{}fused mortal, both a cherubim and a sanobim are left behind.
 \vs p048 5:4 \pc Mansion World Teachers, like most of the other instructors, are commissioned by the Melchizedeks. They are generally supervised by the Morontia Companions, but as individuals and as teachers they are supervised by the acting heads of the schools or spheres wherein they may be functioning as instructors.
 \vs p048 5:5 These advanced cherubim usually work in pairs as they did when attached to the seraphim. They are by nature very near the morontia type of existence, and they are inherently sympathetic teachers of the ascending mortals and most efficiently conduct the program of the mansion world and morontia educational system.
-\vs p048 5:6 In the schools of the morontia life these teachers engage in individual, group, class, and mass teaching. On the mansion worlds such schools are organized in 3 general groups of 100 divisions each: the schools of thinking, the schools of feeling, and the schools of doing. When you reach the constellation, there are added the schools of ethics, the schools of administration, and the schools of social adjustment. On the universe headquarters worlds you will enter the schools of philosophy, divinity, and pure spirituality.
+\vs p048 5:6 In the schools of the morontia life these teachers engage in individual, group, class, and mass teaching. On the mansion worlds such schools are organized in three general groups of 100 divisions each: the schools of thinking, the schools of feeling, and the schools of doing. When you reach the constellation, there are added the schools of ethics, the schools of administration, and the schools of social adjustment. On the universe headquarters worlds you will enter the schools of philosophy, divinity, and pure spirituality.
 \vs p048 5:7 \pc Those things which you might have learned on earth, but which you failed to learn, must be acquired under the tutelage of these faithful and patient teachers. There are no royal roads, short cuts, or easy paths to Paradise. Irrespective of the individual variations of the route, you master the lessons of one sphere before you proceed to another; at least this is true after you once leave the world of your nativity.
 \vs p048 5:8 One of the purposes of the morontia career is to effect the permanent eradication from the mortal survivors of such animal vestigial traits as procrastination, equivocation, insincerity, problem avoidance, unfairness, and ease seeking. The mansonia life early teaches the young morontia pupils that postponement is in no sense avoidance. After the life in the flesh, time is no longer available as a technique of dodging situations or of circumventing disagreeable obligations.
 \vs p048 5:9 \pc Beginning service on the lowest of the tarrying spheres, the Mansion World Teachers advance, with experience, through the educational spheres of the system and the constellation to the training worlds of Salvington. They are subjected to no special discipline either before or after their embrace by the Universe Mother Spirit. They have already been trained for their work while serving as seraphic associates on the worlds native to their pupils of mansion world sojourn. They have had actual experience with these advancing mortals on the inhabited worlds. They are practical and sympathetic teachers, wise and understanding instructors, able and efficient guides. They are entirely familiar with the ascendant plans and thoroughly experienced in the initial phases of the progression career.
