--- a/tex/p062.tex
+++ b/tex/p062.tex
@@ -14,7 +14,7 @@
 \vs p062 1:3 With the passing of time the seacoast of India south\hyp{}west of the mountains gradually submerged, completely isolating the life of this region. There was no avenue of approach to, or escape from, this Mesopotamian or Persian peninsula except to the north, and that was repeatedly cut off by the southern invasions of the glaciers. And it was in this then almost paradisiacal area, and from the superior descendants of this lemur type of mammal, that there sprang two great groups, the simian tribes of modern times and the present\hyp{}day human species.
 \usection{The Dawn Mammals}
 \vs p062 2:1 A little more than 1,000,000 years ago the Mesopotamian dawn mammals, the direct descendants of the North American lemur type of placental mammal, \bibemph{suddenly} appeared. They were active little creatures, almost 91\,cm tall; and while they did not habitually walk on their hind legs, they could easily stand erect. They were hairy and agile and chattered in monkeylike fashion, but unlike the simian tribes, they were flesh eaters. They had a primitive opposable thumb as well as a highly useful grasping big toe. From this point onward the prehuman species successively developed the opposable thumb while they progressively lost the grasping power of the great toe. The later ape tribes retained the grasping big toe but never developed the human type of thumb.
-\vs p062 2:2 These dawn mammals attained full growth when 3 or 4 years of age, having a potential life span, on the average, of about 20 years. As a rule offspring were born singly, although twins were occasional.
+\vs p062 2:2 These dawn mammals attained full growth when three or four years of age, having a potential life span, on the average, of about 20 years. As a rule offspring were born singly, although twins were occasional.
 \vs p062 2:3 The members of this new species had the largest brains for their size of any animal that had theretofore existed on earth. They experienced many of the emotions and shared numerous instincts which later characterized primitive man, being highly curious and exhibiting considerable elation when successful at any undertaking. Food hunger and sex craving were well developed, and a definite sex selection was manifested in a crude form of courtship and choice of mates. They would fight fiercely in defence of their kindred and were quite tender in family associations, possessing a sense of self\hyp{}abasement bordering on shame and remorse. They were very affectionate and touchingly loyal to their mates, but if circumstances separated them, they would choose new partners.
 \vs p062 2:4 Being small of stature and having keen minds to realize the dangers of their forest habitat, they developed an extraordinary fear which led to those wise precautionary measures that so enormously contributed to survival, such as their construction of crude shelters in the high treetops which eliminated many of the perils of ground life. The beginning of the fear tendencies of mankind more specifically dates from these days.
 \vs p062 2:5 These dawn mammals developed more of a tribal spirit than had ever been previously exhibited. They were, indeed, highly gregarious but nevertheless exceedingly pugnacious when in any way disturbed in the ordinary pursuit of their routine life, and they displayed fiery tempers when their anger was fully aroused. Their bellicose natures, however, served a good purpose; superior groups did not hesitate to make war on their inferior neighbours, and thus, by selective survival, the species was progressively improved. They very soon dominated the life of the smaller creatures of this region, and very few of the older noncarnivorous monkeylike tribes survived.
