--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -96,7 +96,7 @@
 \vs p072 7:14 \pc Federal appropriations, except war funds assessed by the National Council of Defence, are originated in the upper legislative house, concurred in by the lower house, approved by the chief executive, and finally validated by the federal budget commission of 100. The members of this commission are nominated by the state governors and elected by the state legislatures to serve for 24 years, one quarter being elected every six years. Every six years this body, by a three\hyp{}fourths ballot, chooses one of its number as chief, and he thereby becomes director\hyp{}controller of the federal treasury.
 \usection{The Special Colleges}
 \vs p072 8:1 In addition to the basic compulsory education program extending from the ages of 5 to 18, special schools are maintained as follows:
-\vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of three classes: national, regional, and state. The public offices of the nation are grouped in 4 divisions. The 1\ts{st} division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the 2\ts{nd} division upon graduating from any one of the 10 regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division 3 includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The 4\ts{th} and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
+\vs p072 8:2 \ublistelem{1.}\bibnobreakspace \bibemph{Statesmanship schools.} These schools are of three classes: national, regional, and state. The public offices of the nation are grouped in four divisions. The first division of public trust pertains principally to the national administration, and all officeholders of this group must be graduates of both regional and national schools of statesmanship. Individuals may accept political, elective, or appointive office in the second division upon graduating from any one of the ten regional schools of statesmanship; their trusts concern responsibilities in the regional administration and the state governments. Division three includes state responsibilities, and such officials are only required to have state degrees of statesmanship. The fourth and last division of officeholders are not required to hold statesmanship degrees, such offices being wholly appointive. They represent minor positions of assistantship, secretaryships, and technical trusts which are discharged by the various learned professions functioning in governmental administrative capacities.
 \vs p072 8:3 Judges of the minor and state courts hold degrees from the state schools of statesmanship. Judges of the jurisdictional tribunals of social, educational, and industrial matters hold degrees from the regional schools. Judges of the federal supreme court must hold degrees from all these schools of statesmanship.
 \vs p072 8:4 \ublistelem{2.}\bibnobreakspace \bibemph{Schools of philosophy.} These schools are affiliated with the temples of philosophy and are more or less associated with religion as a public function.
 \vs p072 8:5 \ublistelem{3.}\bibnobreakspace \bibemph{Institutions of science.} These technical schools are co\hyp{}ordinated with industry rather than with the educational system and are administered under 15 divisions.
