--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -15,7 +15,7 @@
 \vs p139 0:3 \pc Do not make the mistake of regarding the apostles as being altogether ignorant and unlearned. All of them, except the Alpheus twins, were graduates of the synagogue schools, having been thoroughly trained in the Hebrew scriptures and in much of the current knowledge of that day. Seven were graduates of the Capernaum synagogue schools, and there were no better Jewish schools in all Galilee.
 \vs p139 0:4 When your records refer to these messengers of the kingdom as being “ignorant and unlearned,” it was intended to convey the idea that they were laymen, unlearned in the lore of the rabbis and untrained in the methods of rabbinical interpretation of the Scriptures. They were lacking in so\hyp{}called higher education. In modern times they would certainly be considered uneducated, and in some circles of society even uncultured. One thing is certain: They had not all been put through the same rigid and stereotyped educational curriculum. From adolescence on they had enjoyed separate experiences of learning how to live.
 \usection{Andrew, the First Chosen}
-\vs p139 1:1 Andrew, chairman of the apostolic corps of the kingdom, was born in Capernaum. He was the oldest child in a family of 5 --- himself, his brother Simon, and 3 sisters. His father, now dead, had been a partner of Zebedee in the fish\hyp{}drying business at Bethsaida, the fishing harbour of Capernaum. When he became an apostle, Andrew was unmarried but made his home with his married brother, Simon Peter. Both were fishermen and partners of James and John the sons of Zebedee.
+\vs p139 1:1 Andrew, chairman of the apostolic corps of the kingdom, was born in Capernaum. He was the oldest child in a family of five --- himself, his brother Simon, and three sisters. His father, now dead, had been a partner of Zebedee in the fish\hyp{}drying business at Bethsaida, the fishing harbour of Capernaum. When he became an apostle, Andrew was unmarried but made his home with his married brother, Simon Peter. Both were fishermen and partners of James and John the sons of Zebedee.
 \vs p139 1:2 In A.D.\,26, the year he was chosen as an apostle, Andrew was 33, a full year older than Jesus and the oldest of the apostles. He sprang from an excellent line of ancestors and was the ablest man of the twelve. Excepting oratory, he was the peer of his associates in almost every imaginable ability. Jesus never gave Andrew a nickname, a fraternal designation. But even as the apostles soon began to call Jesus Master, so they also designated Andrew by a term the equivalent of Chief.
 \vs p139 1:3 \pc Andrew was a good organizer but a better administrator. He was one of the inner circle of four apostles, but his appointment by Jesus as the head of the apostolic group made it necessary for him to remain on duty with his brethren while the other three enjoyed very close communion with the Master. To the very end Andrew remained dean of the apostolic corps.
 \vs p139 1:4 Although Andrew was never an effective preacher, he was an efficient personal worker, being the pioneer missionary of the kingdom in that, as the first chosen apostle, he immediately brought to Jesus his brother, Simon, who subsequently became one of the greatest preachers of the kingdom. Andrew was the chief supporter of Jesus’ policy of utilizing the program of personal work as a means of training the twelve as messengers of the kingdom.
@@ -73,7 +73,7 @@
 \vs p139 5:1 Philip was the 5\ts{th} apostle to be chosen, being called when Jesus and his first four apostles were on their way from John’s rendezvous on the Jordan to Cana of Galilee. Since he lived at Bethsaida, Philip had for some time known of Jesus, but it had not occurred to him that Jesus was a really great man until that day in the Jordan valley when he said, \textcolour{ubdarkred}{“Follow me.”} Philip was also somewhat influenced by the fact that Andrew, Peter, James, and John had accepted Jesus as the Deliverer.
 \vs p139 5:2 Philip was 27 years of age when he joined the apostles; he had recently been married, but he had no children at this time. The nickname which the apostles gave him signified “curiosity.” Philip was always wanting to be shown. He never seemed to see very far into any proposition. He was not necessarily dull, but he lacked imagination. This lack of imagination was the great weakness of his character. He was a commonplace and matter\hyp{}of\hyp{}fact individual.
 \vs p139 5:3 \pc When the apostles were organized for service, Philip was made steward; it was his duty to see that they were at all times supplied with provisions. And he was a good steward. His strongest characteristic was his methodical thoroughness; he was both mathematical and systematic.
-\vs p139 5:4 Philip came from a family of 7, 3 boys and 4 girls. He was next to the oldest, and after the resurrection he baptized his entire family into the kingdom. Philip’s people were fisherfolk. His father was a very able man, a deep thinker, but his mother was of a very mediocre family. Philip was not a man who could be expected to do big things, but he was a man who could do little things in a big way, do them well and acceptably. Only a few times in four years did he fail to have food on hand to satisfy the needs of all. Even the many emergency demands attendant upon the life they lived seldom found him unprepared. The commissary department of the apostolic family was intelligently and efficiently managed.
+\vs p139 5:4 Philip came from a family of seven, three boys and four girls. He was next to the oldest, and after the resurrection he baptized his entire family into the kingdom. Philip’s people were fisherfolk. His father was a very able man, a deep thinker, but his mother was of a very mediocre family. Philip was not a man who could be expected to do big things, but he was a man who could do little things in a big way, do them well and acceptably. Only a few times in four years did he fail to have food on hand to satisfy the needs of all. Even the many emergency demands attendant upon the life they lived seldom found him unprepared. The commissary department of the apostolic family was intelligently and efficiently managed.
 \vs p139 5:5 The strong point about Philip was his methodical reliability; the weak point in his make\hyp{}up was his utter lack of imagination, the absence of the ability to put two and two together to obtain four. He was mathematical in the abstract but not constructive in his imagination. He was almost entirely lacking in certain types of imagination. He was the typical everyday and commonplace average man. There were a great many such men and women among the multitudes who came to hear Jesus teach and preach, and they derived great comfort from observing one like themselves elevated to an honoured position in the councils of the Master; they derived courage from the fact that one like themselves had already found a high place in the affairs of the kingdom. And Jesus learned much about the way some human minds function as he so patiently listened to Philip’s foolish questions and so many times complied with his steward’s request to “be shown.”
 \vs p139 5:6 The one quality about Jesus which Philip so continuously admired was the Master’s unfailing generosity. Never could Philip find anything in Jesus which was small, niggardly, or stingy, and he worshipped this ever\hyp{}present and unfailing liberality.
 \vs p139 5:7 \pc There was little about Philip’s personality that was impressive. He was often spoken of as “Philip of Bethsaida, the town where Andrew and Peter live.” He was almost without discerning vision; he was unable to grasp the dramatic possibilities of a given situation. He was not pessimistic; he was simply prosaic. He was also greatly lacking in spiritual insight. He would not hesitate to interrupt Jesus in the midst of one of the Master’s most profound discourses to ask an apparently foolish question. But Jesus never reprimanded him for such thoughtlessness; he was patient with him and considerate of his inability to grasp the deeper meanings of the teaching. Jesus well knew that, if he once rebuked Philip for asking these annoying questions, he would not only wound this honest soul, but such a reprimand would so hurt Philip that he would never again feel free to ask questions. Jesus knew that on his worlds of space there were untold billions of similar slow\hyp{}thinking mortals, and he wanted to encourage them all to look to him and always to feel free to come to him with their questions and problems. After all, Jesus was really more interested in Philip’s foolish questions than in the sermon he might be preaching. Jesus was supremely interested in \bibemph{men,} all kinds of men.
@@ -118,7 +118,7 @@
 \vs p139 8:12 Thomas is the great example of a human being who has doubts, faces them, and wins. He had a great mind; he was no carping critic. He was a logical thinker; he was the acid test of Jesus and his fellow apostles. If Jesus and his work had not been genuine, it could not have held a man like Thomas from the start to the finish. He had a keen and sure sense of \bibemph{fact.} At the first appearance of fraud or deception Thomas would have forsaken them all. Scientists may not fully understand all about Jesus and his work on earth, but there lived and worked with the Master and his human associates a man whose mind was that of a true scientist --- Thomas Didymus --- and he believed in Jesus of Nazareth.
 \vs p139 8:13 \pc Thomas had a trying time during the days of the trial and crucifixion. He was for a season in the depths of despair, but he rallied his courage, stuck to the apostles, and was present with them to welcome Jesus on the Sea of Galilee. For a while he succumbed to his doubting depression but eventually rallied his faith and courage. He gave wise counsel to the apostles after Pentecost and, when persecution scattered the believers, went to Cyprus, Crete, the North African coast, and Sicily, preaching the glad tidings of the kingdom and baptizing believers. And Thomas continued preaching and baptizing until he was apprehended by the agents of the Roman government and was put to death in Malta. Just a few weeks before his death he had begun the writing of the life and teachings of Jesus.
 \usection{9 and 10. James and Judas Alpheus}
-\vs p139 9:1 James and Judas the sons of Alpheus, the twin fishermen living near Kheresa, were the 9\ts{th} and 10\ts{th} apostles and were chosen by James and John Zebedee. They were 26 years old and married, James having 3 children, Judas 2.
+\vs p139 9:1 James and Judas the sons of Alpheus, the twin fishermen living near Kheresa, were the 9\ts{th} and 10\ts{th} apostles and were chosen by James and John Zebedee. They were 26 years old and married, James having three children, Judas two.
 \vs p139 9:2 \pc There is not much to be said about these two commonplace fisherfolk. They loved their Master and Jesus loved them, but they never interrupted his discourses with questions. They understood very little about the philosophical discussions or the theological debates of their fellow apostles, but they rejoiced to find themselves numbered among such a group of mighty men. These two men were almost identical in personal appearance, mental characteristics, and extent of spiritual perception. What may be said of one should be recorded of the other.
 \vs p139 9:3 Andrew assigned them to the work of policing the multitudes. They were the chief ushers of the preaching hours and, in fact, the general servants and errand boys of the twelve. They helped Philip with the supplies, they carried money to the families for Nathaniel, and always were they ready to lend a helping hand to any one of the apostles.
 \vs p139 9:4 The multitudes of the common people were greatly encouraged to find two like themselves honoured with places among the apostles. By their very acceptance as apostles these mediocre twins were the means of bringing a host of fainthearted believers into the kingdom. And, too, the common people took more kindly to the idea of being directed and managed by official ushers who were very much like themselves.
