--- a/tex/p156.tex
+++ b/tex/p156.tex
@@ -27,7 +27,7 @@
 \vs p156 2:7 Said Jesus: \textcolour{ubdarkred}{“My disciples must not only cease to do evil but learn to do well; you must not only be cleansed from all conscious sin, but you must refuse to harbour even the feelings of guilt. If you confess your sins, they are forgiven; therefore must you maintain a conscience void of offence.”}
 \vs p156 2:8 Jesus greatly enjoyed the keen sense of humour which these gentiles exhibited. It was the sense of humour displayed by Norana, the Syrian woman, as well as her great and persistent faith, that so touched the Master’s heart and appealed to his mercy. Jesus greatly regretted that his people --- the Jews --- were so lacking in humour. He once said to Thomas: \textcolour{ubdarkred}{“My people take themselves too seriously; they are just about devoid of an appreciation of humour. The burdensome religion of the Pharisees could never have had origin among a people with a sense of humour. They also lack consistency; they strain at gnats and swallow camels.”}
 \usection{The Journey up the Coast}
-\vs p156 3:1 On Tuesday, June 28, the Master and his associates left Sidon, going up the coast to Porphyreon and Heldua. They were well received by the gentiles, and many were added to the kingdom during this week of teaching and preaching. The apostles preached in Porphyreon and the evangelists taught in Heldua. While the 24 were thus engaged in their work, Jesus left them for a period of 3 or 4 days, paying a visit to the coast city of Beirut, where he visited with a Syrian named Malach, who was a believer, and who had been at Bethsaida the year before.
+\vs p156 3:1 On Tuesday, June 28, the Master and his associates left Sidon, going up the coast to Porphyreon and Heldua. They were well received by the gentiles, and many were added to the kingdom during this week of teaching and preaching. The apostles preached in Porphyreon and the evangelists taught in Heldua. While the 24 were thus engaged in their work, Jesus left them for a period of three or four days, paying a visit to the coast city of Beirut, where he visited with a Syrian named Malach, who was a believer, and who had been at Bethsaida the year before.
 \vs p156 3:2 On Wednesday, July 6, they all returned to Sidon and tarried at the home of Justa until Sunday morning, when they departed for Tyre, going south along the coast by way of Sarepta, arriving at Tyre on Monday, July 11. By this time the apostles and the evangelists were becoming accustomed to working among these so\hyp{}called gentiles, who were in reality mainly descended from the earlier Canaanite tribes of still earlier Semitic origin. All of these peoples spoke the Greek language. It was a great surprise to the apostles and evangelists to observe the eagerness of these gentiles to hear the gospel and to note the readiness with which many of them believed.
 \usection{At Tyre}
 \vs p156 4:1 From July 11 to July 24 they taught in Tyre. Each of the apostles took with him one of the evangelists, and thus two and two they taught and preached in all parts of Tyre and its environs. The polyglot population of this busy seaport heard them gladly, and many were baptized into the outward fellowship of the kingdom. Jesus maintained his headquarters at the home of a Jew named Joseph, a believer, who lived 5--6\,km south of Tyre, not far from the tomb of Hiram who had been king of the city\hyp{}state of Tyre during the times of David and Solomon.
@@ -61,7 +61,7 @@
 \vs p156 6:1 About noon on Sunday, July 24, Jesus and the twelve left the home of Joseph, south of Tyre, going down the coast to Ptolemais. Here they tarried for a day, speaking words of comfort to the company of believers resident there. Peter preached to them on the evening of July 25.
 \vs p156 6:2 On Tuesday they left Ptolemais, going east inland to near Jotapata by way of the Tiberias road. Wednesday they stopped at Jotapata and instructed the believers further in the things of the kingdom. Thursday they left Jotapata, going north on the Nazareth\hyp{}Mount Lebanon trail to the village of Zebulun, by way of Ramah. They held meetings at Ramah on Friday and remained over the Sabbath. They reached Zebulun on Sunday, the 31\ts{st}, holding a meeting that evening and departing the next morning.
 \vs p156 6:3 Leaving Zebulun, they journeyed over to the junction with the Magdala\hyp{}Sidon road near Gischala, and thence they made their way to Gennesaret on the western shores of the lake of Galilee, south of Capernaum, where they had appointed to meet with David Zebedee, and where they intended to take counsel as to the next move to be made in the work of preaching the gospel of the kingdom.
-\vs p156 6:4 During a brief conference with David they learned that many leaders were then gathered together on the opposite side of the lake near Kheresa, and accordingly, that very evening a boat took them across. For one day they rested quietly in the hills, going on the next day to the park, near by, where the Master once fed the 5,000. Here they rested for 3 days and held daily conferences, which were attended by about 50 men and women, the remnants of the once numerous company of believers resident in Capernaum and its environs.
+\vs p156 6:4 During a brief conference with David they learned that many leaders were then gathered together on the opposite side of the lake near Kheresa, and accordingly, that very evening a boat took them across. For one day they rested quietly in the hills, going on the next day to the park, near by, where the Master once fed the 5,000. Here they rested for three days and held daily conferences, which were attended by about 50 men and women, the remnants of the once numerous company of believers resident in Capernaum and its environs.
 \vs p156 6:5 \pc While Jesus was absent from Capernaum and Galilee, the period of the Phoenician sojourn, his enemies reckoned that the whole movement had been broken up and concluded that Jesus’ haste in withdrawing indicated he was so thoroughly frightened that he would not likely ever return to bother them. All active opposition to his teachings had about subsided. The believers were beginning to hold public meetings once more, and there was occurring a gradual but effective consolidation of the tried and true survivors of the great sifting through which the gospel believers had just passed.
 \vs p156 6:6 Philip, the brother of Herod, had become a half\hyp{}hearted believer in Jesus and sent word that the Master was free to live and work in his domains.
 \vs p156 6:7 The mandate to close the synagogues of all Jewry to the teachings of Jesus and all his followers had worked adversely upon the scribes and Pharisees. Immediately upon Jesus’ removing himself as an object of controversy, there occurred a reaction among the entire Jewish people; there was general resentment against the Pharisees and the Sanhedrin leaders at Jerusalem. Many of the rulers of the synagogues began surreptitiously to open their synagogues to Abner and his associates, claiming that these teachers were followers of John and not disciples of Jesus.
