--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -46,7 +46,7 @@
 \vs p162 4:1 The presence of people from all of the known world, from Spain to India, made the feast of tabernacles an ideal occasion for Jesus for the first time publicly to proclaim his full gospel in Jerusalem. At this feast the people lived much in the open air, in leafy booths. It was the feast of the harvest ingathering, and coming, as it did, in the cool of the autumn months, it was more generally attended by the Jews of the world than was the Passover at the end of the winter or Pentecost at the beginning of summer. The apostles at last beheld their Master making the bold announcement of his mission on earth before all the world, as it were.
 \vs p162 4:2 This was the feast of feasts, since any sacrifice not made at the other festivals could be made at this time. This was the occasion of the reception of the temple offerings; it was a combination of vacation pleasures with the solemn rites of religious worship. Here was a time of racial rejoicing, mingled with sacrifices, Levitical chants, and the solemn blasts of the silvery trumpets of the priests. At night the impressive spectacle of the temple and its pilgrim throngs was brilliantly illuminated by the great candelabras which burned brightly in the court of the women as well as by the glare of scores of torches standing about the temple courts. The entire city was gaily decorated except the Roman castle of Antonia, which looked down in grim contrast upon this festive and worshipful scene. And how the Jews did hate this ever\hyp{}present reminder of the Roman yoke!
 \vs p162 4:3 Seventy bullocks were sacrificed during the feast, the symbol of the seventy nations of heathendom. The ceremony of the outpouring of the water symbolized the outpouring of the divine spirit. This ceremony of the water followed the sunrise procession of the priests and Levites. The worshippers passed down the steps leading from the court of Israel to the court of the women while successive blasts were blown upon the silvery trumpets. And then the faithful marched on toward the beautiful gate, which opened upon the court of the gentiles. Here they turned about to face westward, to repeat their chants, and to continue their march for the symbolic water.
-\vs p162 4:4 \pc On the last day of the feast almost 450 priests with a corresponding number of Levites officiated. At daybreak the pilgrims assembled from all parts of the city, each carrying in the right hand a sheaf of myrtle, willow, and palm branches, while in the left hand each one carried a branch of the paradise apple --- the citron, or the “forbidden fruit.” These pilgrims divided into 3 groups for this early morning ceremony. One band remained at the temple to attend the morning sacrifices; another group marched down below Jerusalem to near Maza to cut the willow branches for the adornment of the sacrificial altar, while the third group formed a procession to march from the temple behind the water priest, who, to the sound of the silvery trumpets, bore the golden pitcher which was to contain the symbolic water, out through Ophel to near Siloam, where was located the fountain gate. After the golden pitcher had been filled at the pool of Siloam, the procession marched back to the temple, entering by way of the water gate and going directly to the court of the priests, where the priest bearing the water pitcher was joined by the priest bearing the wine for the drink offering. These two priests then repaired to the silver funnels leading to the base of the altar and poured the contents of the pitchers therein. The execution of this rite of pouring the wine and the water was the signal for the assembled pilgrims to begin the chanting of the Psalms from 113 to 118 inclusive, in alternation with the Levites. And as they repeated these lines, they would wave their sheaves at the altar. Then followed the sacrifices for the day, associated with the repeating of the Psalm for the day, the Psalm for the last day of the feast being the 82\ts{nd}, beginning with the 5\ts{th} verse.
+\vs p162 4:4 \pc On the last day of the feast almost 450 priests with a corresponding number of Levites officiated. At daybreak the pilgrims assembled from all parts of the city, each carrying in the right hand a sheaf of myrtle, willow, and palm branches, while in the left hand each one carried a branch of the paradise apple --- the citron, or the “forbidden fruit.” These pilgrims divided into three groups for this early morning ceremony. One band remained at the temple to attend the morning sacrifices; another group marched down below Jerusalem to near Maza to cut the willow branches for the adornment of the sacrificial altar, while the third group formed a procession to march from the temple behind the water priest, who, to the sound of the silvery trumpets, bore the golden pitcher which was to contain the symbolic water, out through Ophel to near Siloam, where was located the fountain gate. After the golden pitcher had been filled at the pool of Siloam, the procession marched back to the temple, entering by way of the water gate and going directly to the court of the priests, where the priest bearing the water pitcher was joined by the priest bearing the wine for the drink offering. These two priests then repaired to the silver funnels leading to the base of the altar and poured the contents of the pitchers therein. The execution of this rite of pouring the wine and the water was the signal for the assembled pilgrims to begin the chanting of the Psalms from 113 to 118 inclusive, in alternation with the Levites. And as they repeated these lines, they would wave their sheaves at the altar. Then followed the sacrifices for the day, associated with the repeating of the Psalm for the day, the Psalm for the last day of the feast being the 82\ts{nd}, beginning with the 5\ts{th} verse.
 \usection{Sermon on the Light of the World}
 \vs p162 5:1 On the evening of the next to the last day of the feast, when the scene was brilliantly illuminated by the lights of the candelabras and the torches, Jesus stood up in the midst of the assembled throng and said:
 \vs p162 5:2 \pc \textcolour{ubdarkred}{“I am the light of the world. He who follows me shall not walk in darkness but shall have the light of life. Presuming to place me on trial and assuming to sit as my judges, you declare that, if I bear witness of myself, my witness cannot be true. But never can the creature sit in judgment on the Creator. Even if I do bear witness about myself, my witness is everlastingly true, for I know whence I came, who I am, and whither I go. You who would kill the Son of Man know not whence I came, who I am, or whither I go. You only judge by the appearances of the flesh; you do not perceive the realities of the spirit. I judge no man, not even my archenemy. But if I should choose to judge, my judgment would be true and righteous, for I would judge not alone but in association with my Father, who sent me into the world, and who is the source of all true judgment. You even allow that the witness of two reliable persons may be accepted --- well, then, I bear witness of these truths; so also does my Father in heaven. And when I told you this yesterday, in your darkness you asked me, ‘Where is your Father?’ Truly, you know neither me nor my Father, for if you had known me, you would also have known the Father.}
@@ -67,7 +67,7 @@
 \vs p162 7:6 \pc When the unbelieving Jews and the agents of the Sanhedrin who had gathered about by this time heard these words, they raised a tumult, shouting: “You are not 50 years of age, and yet you talk about seeing Abraham; you are a child of the devil!” Jesus was unable to continue the discourse. He only said as he departed, \textcolour{ubdarkred}{“Verily, verily, I say to you, before Abraham was, I am.”} Many of the unbelievers rushed forth for stones to cast at him, and the agents of the Sanhedrin sought to place him under arrest, but the Master quickly made his way through the temple corridors and escaped to a secret meeting place near Bethany where Martha, Mary, and Lazarus awaited him.
 \usection{The Visit with Martha and Mary}
 \vs p162 8:1 It had been arranged that Jesus should lodge with Lazarus and his sisters at a friend’s house, while the apostles were scattered here and there in small groups, these precautions being taken because the Jewish authorities were again becoming bold with their plans to arrest him.
-\vs p162 8:2 For years it had been the custom for these 3 to drop everything and listen to Jesus’ teaching whenever he chanced to visit them. With the loss of their parents, Martha had assumed the responsibilities of the home life, and so on this occasion, while Lazarus and Mary sat at Jesus’ feet drinking in his refreshing teaching, Martha made ready to serve the evening meal. It should be explained that Martha was unnecessarily distracted by numerous needless tasks, and that she was cumbered by many trivial cares; that was her disposition.
+\vs p162 8:2 For years it had been the custom for these three to drop everything and listen to Jesus’ teaching whenever he chanced to visit them. With the loss of their parents, Martha had assumed the responsibilities of the home life, and so on this occasion, while Lazarus and Mary sat at Jesus’ feet drinking in his refreshing teaching, Martha made ready to serve the evening meal. It should be explained that Martha was unnecessarily distracted by numerous needless tasks, and that she was cumbered by many trivial cares; that was her disposition.
 \vs p162 8:3 As Martha busied herself with all these supposed duties, she was perturbed because Mary did nothing to help. Therefore she went to Jesus and said: “Master, do you not care that my sister has left me alone to do all of the serving? Will you not bid her to come and help me?” Jesus answered: \textcolour{ubdarkred}{“Martha, Martha, why are you always anxious about so many things and troubled by so many trifles? Only one thing is really worth while, and since Mary has chosen this good and needful part, I shall not take it away from her. But when will both of you learn to live as I have taught you: both serving in co\hyp{}operation and both refreshing your souls in unison? Can you not learn that there is a time for everything --- that the lesser matters of life should give way before the greater things of the heavenly kingdom?”}
 \usection{At Bethlehem with Abner}
 \vs p162 9:1 Throughout the week that followed the feast of tabernacles, scores of believers forgathered at Bethany and received instruction from the twelve apostles. The Sanhedrin made no effort to molest these gatherings since Jesus was not present; he was throughout this time working with Abner and his associates in Bethlehem. The day following the close of the feast, Jesus had departed for Bethany, and he did not again teach in the temple during this visit to Jerusalem.
