--- a/tex/p046.tex
+++ b/tex/p046.tex
@@ -30,7 +30,7 @@
 \vs p046 2:8 \pc Mount Seraph is the highest elevation on Jerusem, almost 4.5\,km, and is the point of departure for all transport seraphim. Numerous mechanical developments are used in providing initial energy for escaping the planetary gravity and overcoming the air resistance. A seraphic transport departs every 3 seconds of Urantia time throughout the light period and, sometimes, far into the recession. The transporters take off at about 25 standard miles per second of Urantia time and do not attain standard velocity until they are over 2,000 miles away from Jerusem.
 \vs p046 2:9 Transports arrive on the crystal field, the so\hyp{}called sea of glass. Around this area are the receiving stations for the various orders of beings who traverse space by seraphic transport. Near the polar crystal receiving station for student visitors you may ascend the pearly observatory and view the immense relief map of the entire headquarters planet.
 \usection{The Jerusem Broadcasts}
-\vs p046 3:1 The superuniverse and Paradise\hyp{}Havona broadcasts are received on Jerusem in liaison with Salvington and by a technique involving the polar crystal, the sea of glass. In addition to provisions for the reception of these extra\hyp{}Nebadon communications, there are 3 distinct groups of receiving stations. These separate but tricircular groups of stations are adjusted to the reception of broadcasts from the local worlds, from the constellation headquarters, and from the capital of the local universe. All these broadcasts are automatically displayed so as to be discernible by all types of beings present in the central broadcast amphitheatre; of all preoccupations for an ascendant mortal on Jerusem, none is more engaging and engrossing than that of listening in on the never\hyp{}ending stream of universe space reports.
+\vs p046 3:1 The superuniverse and Paradise\hyp{}Havona broadcasts are received on Jerusem in liaison with Salvington and by a technique involving the polar crystal, the sea of glass. In addition to provisions for the reception of these extra\hyp{}Nebadon communications, there are three distinct groups of receiving stations. These separate but tricircular groups of stations are adjusted to the reception of broadcasts from the local worlds, from the constellation headquarters, and from the capital of the local universe. All these broadcasts are automatically displayed so as to be discernible by all types of beings present in the central broadcast amphitheatre; of all preoccupations for an ascendant mortal on Jerusem, none is more engaging and engrossing than that of listening in on the never\hyp{}ending stream of universe space reports.
 \vs p046 3:2 This Jerusem broadcast\hyp{}receiving station is encircled by an enormous amphitheatre, constructed of scintillating materials largely unknown on Urantia and seating over five billion beings --- material and morontia --- besides accommodating innumerable spirit personalities. It is the favourite diversion for all Jerusem to spend their leisure at the broadcast station, there to learn of the welfare and state of the universe. And this is the only planetary activity which is not slowed down during the recession of light.
 \vs p046 3:3 At this broadcast\hyp{}receiving amphitheatre the Salvington messages are coming in continuously. Near by, the Edentia word of the Most High Constellation Fathers is received at least once a day. Periodically the regular and special broadcasts of Uversa are relayed through Salvington, and when Paradise messages are in reception, the entire population is assembled around the sea of glass, and the Uversa friends add the reflectivity phenomena to the technique of the Paradise broadcast so that everything heard becomes visible. And it is in this manner that continual foretastes of advancing beauty and grandeur are afforded the mortal survivors as they journey inward on the eternal adventure.
 \vs p046 3:4 \pc The Jerusem sending station is located at the opposite pole of the sphere. All broadcasts to the individual worlds are relayed from the system capitals except the Michael messages, which sometimes go direct to their destinations over the archangels’ circuit.
@@ -42,7 +42,7 @@
 \vs p046 4:5 \ublistelem{4.}\bibnobreakspace \bibemph{The triangles ---} the local or Jerusem administrative areas.
 \vs p046 4:6 \pc This arrangement of the system activities into circles, squares, rectangles, and triangles is common to all the system capitals of Nebadon. In another universe an entirely different arrangement might prevail. These are matters determined by the diverse plans of the Creator Sons.
 \vs p046 4:7 \pc Our narrative of these residential and administrative areas takes no account of the vast and beautiful estates of the Material Sons of God, the permanent citizens of Jerusem, neither do we mention numerous other fascinating orders of spirit and near\hyp{}spirit creatures. For example: Jerusem enjoys the efficient services of the spironga of design for system function. These beings are devoted to spiritual ministry in behalf of the supermaterial residents and visitors. They are a wonderful group of intelligent and beautiful beings who are the transition servants of the higher morontia creatures and of the morontia helpers who labour for the upkeep and embellishment of all morontia creations. They are on Jerusem what the midway creatures are on Urantia, midway helpers functioning between the material and the spiritual.
-\vs p046 4:8 The system capitals are unique in that they are the only worlds which exhibit well\hyp{}nigh perfectly all 3 phases of universe existence: the material, the morontial, and the spiritual. Whether you are a material, morontia, or spirit personality, you will feel at home on Jerusem; so also do the combined beings, such as the midway creatures and the Material Sons.
+\vs p046 4:8 The system capitals are unique in that they are the only worlds which exhibit well\hyp{}nigh perfectly all three phases of universe existence: the material, the morontial, and the spiritual. Whether you are a material, morontia, or spirit personality, you will feel at home on Jerusem; so also do the combined beings, such as the midway creatures and the Material Sons.
 \vs p046 4:9 Jerusem has great buildings of both material and morontia types, while the embellishment of the purely spiritual zones is no less exquisite and replete. If I only had words to tell you of the morontia counterparts of the marvellous physical equipment of Jerusem! If I could only go on to portray the sublime grandeur and exquisite perfection of the spiritual appointments of this headquarters world! Your most imaginative concept of perfection of beauty and repleteness of appointment would hardly approach these grandeurs. And Jerusem is but the first step on the way to the supernal perfection of Paradise beauty.
 \usection{The Jerusem Circles}
 \vs p046 5:1 The residential reservations assigned to the major groups of universe life are designated the Jerusem circles. Those circle groups which find mention in these narratives are the following:
@@ -60,7 +60,7 @@
 \vs p046 5:13 The 2\ts{nd} circle is occupied by the Trinity Teacher Sons. In this sacred domain the Daynals and their associates carry forward the training of the newly arrived primary Teacher Sons. And in all of this work they are ably assisted by a division of certain co\hyp{}ordinates of the Brilliant Evening Stars. The creature\hyp{}trinitized sons occupy a sector of the Daynal circle. The Trinity Teacher Sons come the nearest to being the personal representatives of the Universal Father in a local system; they are at least Trinity\hyp{}origin beings. This 2\ts{nd} circle is a domain of extraordinary interest to all the peoples of Jerusem.
 \vs p046 5:14 The 3\ts{rd} circle is devoted to the Melchizedeks. Here the system chiefs reside and supervise the almost endless activities of these versatile Sons. From the first of the mansion worlds on through all the Jerusem career of ascending mortals, the Melchizedeks are foster fathers and ever\hyp{}present advisers. It would not be amiss to say that they are the dominant influence on Jerusem aside from the ever\hyp{}present activities of the Material Sons and Daughters.
 \vs p046 5:15 The 4\ts{th} circle is the home of the Vorondadeks and all other orders of the visiting and observer Sons who are not otherwise provided for. The Most High Constellation Fathers take up their abode in this circle when on visits of inspection to the local system. Perfectors of Wisdom, Divine Counsellors, and Universal Censors all reside in this circle when on duty in the system.
-\vs p046 5:16 The 5\ts{th} circle is the abode of the Lanonandeks, the sonship order of the System Sovereigns and the Planetary Princes. The 3 groups mingle as one when at home in this domain. The system reserves are held in this circle, while the System Sovereign has a temple situated at the centre of the governing group of structures on administration hill.
+\vs p046 5:16 The 5\ts{th} circle is the abode of the Lanonandeks, the sonship order of the System Sovereigns and the Planetary Princes. The three groups mingle as one when at home in this domain. The system reserves are held in this circle, while the System Sovereign has a temple situated at the centre of the governing group of structures on administration hill.
 \vs p046 5:17 The 6\ts{th} circle is the tarrying place of the system Life Carriers. All orders of these Sons are here assembled, and from here they go forth on their world assignments.
 \vs p046 5:18 The 7\ts{th} circle is the rendezvous of the ascending sons, those assigned mortals who may be temporarily functioning on the system headquarters, together with their seraphic consorts. All ex\hyp{}mortals above the status of Jerusem citizens and below that of finaliters are reckoned as belonging to the group having its headquarters in this circle.
 \vs p046 5:19 These circular reservations of the Sons occupy an enormous area, and until 1900 years ago there existed a great open space at its centre. This central region is now occupied by the Michael memorial, completed some 500 years ago. 495 years ago, when this temple was dedicated, Michael was present in person, and all Jerusem heard the touching story of the Master Son’s bestowal on Urantia, the least of Satania. The Michael memorial is now the centre of all activities embraced in the modified management of the system occasioned by Michael’s bestowal, including most of the more recently transplanted Salvington activities. The memorial staff consists of over 1,000,000 personalities.
@@ -73,8 +73,8 @@
 \vs p046 5:26 \ublistelem{4.}\bibnobreakspace \bibemph{The circles of the Master Physical Controllers.} The various orders of the Master Physical Controllers are concentrically arranged around the vast temple of power, wherein presides the power chief of the system in association with the chief of the Morontia Power Supervisors. This temple of power is one of two sectors on Jerusem where ascending mortals and midway creatures are not permitted. The other one is the dematerializing sector in the area of the Material Sons, a series of laboratories wherein the transport seraphim transform material beings into a state quite like that of the morontia order of existence.
 \vs p046 5:27 \ublistelem{5.}\bibnobreakspace \bibemph{The circles of the ascending mortals.} The central area of the circles of the ascending mortals is occupied by a group of 619 planetary memorials representative of the inhabited worlds of the system, and these structures periodically undergo extensive changes. It is the privilege of the mortals from each world to agree, from time to time, upon certain of the alterations or additions to their planetary memorials. Many changes are even now being made in the Urantia structures. The centre of these 619 temples is occupied by a working model of Edentia and its many worlds of ascendant culture. This model is 40 miles in diameter and is an actual reproduction of the Edentia system, true to the original in every detail.
 \vs p046 5:28 Ascenders enjoy their Jerusem services and take pleasure in observing the techniques of other groups. Everything done in these various circles is open to the full observation of all Jerusem.
-\vs p046 5:29 The activities of such a world are of 3 distinct varieties: work, progress, and play. Stated otherwise, they are: service, study, and relaxation. The composite activities consist of social intercourse, group entertainment, and divine worship. There is great educational value in mingling with diverse groups of personalities, orders very different from one’s own fellows.
-\vs p046 5:30 \ublistelem{6.}\bibnobreakspace \bibemph{The circles of the courtesy colonies.} The seven circles of the courtesy colonies are graced by 3 enormous structures: the vast astronomic observatory of Jerusem, the gigantic art gallery of Satania, and the immense assembly hall of the reversion directors, the theatre of morontia activities devoted to rest and recreation.
+\vs p046 5:29 The activities of such a world are of three distinct varieties: work, progress, and play. Stated otherwise, they are: service, study, and relaxation. The composite activities consist of social intercourse, group entertainment, and divine worship. There is great educational value in mingling with diverse groups of personalities, orders very different from one’s own fellows.
+\vs p046 5:30 \ublistelem{6.}\bibnobreakspace \bibemph{The circles of the courtesy colonies.} The seven circles of the courtesy colonies are graced by three enormous structures: the vast astronomic observatory of Jerusem, the gigantic art gallery of Satania, and the immense assembly hall of the reversion directors, the theatre of morontia activities devoted to rest and recreation.
 \vs p046 5:31 The celestial artisans direct the spornagia and provide the host of creative decorations and monumental memorials which abound in every place of public assembly. The studios of these artisans are among the largest and most beautiful of all the matchless structures of this wonderful world. The other courtesy colonies maintain extensive and beautiful headquarters. Many of these buildings are constructed wholly of crystal gems. All the architectural worlds abound in crystals and the so\hyp{}called precious metals.
 \vs p046 5:32 \ublistelem{7.}\bibnobreakspace \bibemph{The circles of the finaliters} have a unique structure at the centre. And this same vacant temple is found on every system headquarters world throughout Nebadon. This edifice on Jerusem is sealed with the insignia of Michael, and it bears this inscription: “Undedicated to the seventh stage of spirit --- to the eternal assignment.” Gabriel placed the seal on this temple of mystery, and none but Michael can or may break the seal of sovereignty affixed by the Bright and Morning Star. Some day you shall look upon this silent temple, even though you may not penetrate its mystery.
 \vs p046 5:33 \pc \bibemph{Other Jerusem circles:} In addition to these residential circles there are on Jerusem numerous additional designated abodes.
