--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -97,7 +97,7 @@
 \vs p066 7:2 The interiors of the central temple of worship and the ten council mansions of the supervising groups of supermen were indeed beautiful works of art. And while the residential buildings were models of neatness and cleanliness, everything was very simple and altogether primitive in comparison with later\hyp{}day developments. At this headquarters of culture no methods were employed which did not naturally belong on Urantia.
 \vs p066 7:3 The Prince’s corporeal staff presided over simple and exemplary abodes which they maintained as homes designed to inspire and favourably impress the student observers sojourning at the world’s social centre and educational headquarters.
 \vs p066 7:4 \pc The definite order of family life and the living of one family together in one residence of comparatively settled location date from these times of Dalamatia and were chiefly due to the example and teachings of the 100 and their pupils. The home as a social unit never became a success until the supermen and superwomen of Dalamatia led mankind to love and plan for their grandchildren and their grandchildren’s children. Savage man loves his child, but civilized man loves also his grandchild.
-\vs p066 7:5 The Prince’s staff lived together as fathers and mothers. True, they had no children of their own, but the 50 pattern homes of Dalamatia never sheltered less than 500 adopted little ones assembled from the superior families of the Andonic and Sangik races; many of these children were orphans. They were favoured with the discipline and training of these superparents; and then, after 3 years in the schools of the Prince (they entered from 13 to 15), they were eligible for marriage and ready to receive their commissions as emissaries of the Prince to the needy tribes of their respective races.
+\vs p066 7:5 The Prince’s staff lived together as fathers and mothers. True, they had no children of their own, but the 50 pattern homes of Dalamatia never sheltered less than 500 adopted little ones assembled from the superior families of the Andonic and Sangik races; many of these children were orphans. They were favoured with the discipline and training of these superparents; and then, after three years in the schools of the Prince (they entered from 13 to 15), they were eligible for marriage and ready to receive their commissions as emissaries of the Prince to the needy tribes of their respective races.
 \vs p066 7:6 \pc Fad sponsored the Dalamatia plan of teaching that was carried out as an industrial school in which the pupils learned by doing, and through which they worked their way by the daily performance of useful tasks. This plan of education did not ignore thinking and feeling in the development of character; but it gave first place to manual training. The instruction was individual and collective. The pupils were taught by both men and women and by the two acting conjointly. One half of this group instruction was by sexes; the other half was coeducational. Students were taught manual dexterity as individuals and were socialized in groups or classes. They were trained to fraternize with younger groups, older groups, and adults, as well as to do teamwork with those of their own ages. They were also familiarized with such associations as family groups, play squads, and school classes.
 \vs p066 7:7 Among the later students trained in Mesopotamia for work with their respective races were Andonites from the highlands of western India together with representatives of the red men and the blue men; still later a small number of the yellow race were also received.
 \vs p066 7:8 \pc Hap presented the early races with a moral law. This code was known as “The Father’s Way” and consisted of the following seven commands:
