--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -28,7 +28,7 @@
 \usection{The Urmia Lectures}
 \vs p134 3:1 On the way to the Caspian Sea, Jesus had stopped several days for rest and recuperation at the old Persian city of Urmia on the western shores of Lake Urmia. On the largest of a group of islands situated a short distance offshore near Urmia was located a large building --- a lecture amphitheatre --- dedicated to the “spirit of religion.” This structure was really a temple of the philosophy of religions.
 \vs p134 3:2 This temple of religion had been built by a wealthy merchant citizen of Urmia and his three sons. This man was Cymboyton, and he numbered among his ancestors many diverse peoples.
-\vs p134 3:3 The lectures and discussions in this school of religion began at 10:00 every morning in the week. The afternoon sessions started at 15:00, and the evening debates opened at 20:00. Cymboyton or one of his 3 sons always presided at these sessions of teaching, discussion, and debate. The founder of this unique school of religions lived and died without ever revealing his personal religious beliefs.
+\vs p134 3:3 The lectures and discussions in this school of religion began at 10:00 every morning in the week. The afternoon sessions started at 15:00, and the evening debates opened at 20:00. Cymboyton or one of his three sons always presided at these sessions of teaching, discussion, and debate. The founder of this unique school of religions lived and died without ever revealing his personal religious beliefs.
 \vs p134 3:4 On several occasions Jesus participated in these discussions, and before he left Urmia, Cymboyton arranged with Jesus to sojourn with them for two weeks on his return trip and give 24 lectures on “The Brotherhood of Men,” and to conduct 12 evening sessions of questions, discussions, and debates on his lectures in particular and on the brotherhood of men in general.
 \vs p134 3:5 In accordance with this arrangement, Jesus stopped off on the return trip and delivered these lectures. This was the most systematic and formal of all the Master’s teaching on Urantia. Never before or after did he say so much on one subject as was contained in these lectures and discussions on the brotherhood of men. In reality these lectures were on the “Kingdom of God” and the “Kingdoms of Men.”
 \vs p134 3:6 More than 30 religions and religious cults were represented on the faculty of this temple of religious philosophy. These teachers were chosen, supported, and fully accredited by their respective religious groups. At this time there were about 75 teachers on the faculty, and they lived in cottages each accommodating about a dozen persons. Every new moon these groups were changed by the casting of lots. Intolerance, a contentious spirit, or any other disposition to interfere with the smooth running of the community would bring about the prompt and summary dismissal of the offending teacher. He would be unceremoniously dismissed, and his alternate in waiting would be immediately installed in his place.
