--- a/tex/p158.tex
+++ b/tex/p158.tex
@@ -9,45 +9,45 @@
 \uminitoc{At Peter’s House}
 \author{Midwayer Commission}
 \vs p158 0:1 It was near sundown on Friday afternoon, August 12, A.D.\,29, when Jesus and his associates reached the foot of Mount Hermon, near the very place where the lad Tiglath once waited while the Master ascended the mountain alone to settle the spiritual destinies of Urantia and technically to terminate the Lucifer rebellion. And here they sojourned for two days in spiritual preparation for the events so soon to follow.
-\vs p158 0:2 In a general way, Jesus knew beforehand what was to transpire on the mountain, and he much desired that all his apostles might share this experience. It was to fit them for this revelation of himself that he tarried with them at the foot of the mountain. But they could not attain those spiritual levels which would justify their exposure to the full experience of the visitation of the celestial beings so soon to appear on earth. And since he could not take all of his associates with him, he decided to take only the 3 who were in the habit of accompanying him on such special vigils. Accordingly, only Peter, James, and John shared even a part of this unique experience with the Master.
+\vs p158 0:2 In a general way, Jesus knew beforehand what was to transpire on the mountain, and he much desired that all his apostles might share this experience. It was to fit them for this revelation of himself that he tarried with them at the foot of the mountain. But they could not attain those spiritual levels which would justify their exposure to the full experience of the visitation of the celestial beings so soon to appear on earth. And since he could not take all of his associates with him, he decided to take only the three who were in the habit of accompanying him on such special vigils. Accordingly, only Peter, James, and John shared even a part of this unique experience with the Master.
 \usection{The Transfiguration}
-\vs p158 1:1 Early on the morning of Monday, August 15, Jesus and the 3 apostles began the ascent of Mount Hermon, and this was six days after the memorable noontide confession of Peter by the roadside under the mulberry trees.
+\vs p158 1:1 Early on the morning of Monday, August 15, Jesus and the three apostles began the ascent of Mount Hermon, and this was six days after the memorable noontide confession of Peter by the roadside under the mulberry trees.
 \vs p158 1:2 Jesus had been summoned to go up on the mountain, apart by himself, for the transaction of important matters having to do with the progress of his bestowal in the flesh as this experience was related to the universe of his own creation. It is significant that this extraordinary event was timed to occur while Jesus and the apostles were in the lands of the gentiles, and that it actually transpired on a mountain of the gentiles.
-\vs p158 1:3 They reached their destination, about halfway up the mountain, shortly before noon, and while eating lunch, Jesus told the 3 apostles something of his experience in the hills to the east of Jordan shortly after his baptism and also some more of his experience on Mount Hermon in connection with his former visit to this lonely retreat.
+\vs p158 1:3 They reached their destination, about halfway up the mountain, shortly before noon, and while eating lunch, Jesus told the three apostles something of his experience in the hills to the east of Jordan shortly after his baptism and also some more of his experience on Mount Hermon in connection with his former visit to this lonely retreat.
 \vs p158 1:4 When a boy, Jesus used to ascend the hill near his home and dream of the battles which had been fought by the armies of empires on the plain of Esdraelon; now he ascended Mount Hermon to receive the endowment which was to prepare him to descend upon the plains of the Jordan to enact the closing scenes of the drama of his bestowal on Urantia. The Master could have relinquished the struggle this day on Mount Hermon and returned to his rule of the universe domains, but he not only chose to meet the requirements of his order of divine sonship embraced in the mandate of the Eternal Son on Paradise, but he also elected to meet the last and full measure of the present will of his Paradise Father. On this day in August 3 of his apostles saw him decline to be invested with full universe authority. They looked on in amazement as the celestial messengers departed, leaving him alone to finish out his earth life as the Son of Man and the Son of God.
 \vs p158 1:5 The faith of the apostles was at a high point at the time of the feeding of the 5,000, and then it rapidly fell almost to zero. Now, as a result of the Master’s admission of his divinity, the lagging faith of the twelve arose in the next few weeks to its highest pitch, only to undergo a progressive decline. The third revival of their faith did not occur until after the Master’s resurrection.
-\vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the 3 apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
+\vs p158 1:6 It was about 15:00 on this beautiful afternoon that Jesus took leave of the three apostles, saying: \textcolour{ubdarkred}{“I go apart by myself for a season to commune with the Father and his messengers; I bid you tarry here and, while awaiting my return, pray that the Father’s will may be done in all your experience in connection with the further bestowal mission of the Son of Man.”} And after saying this to them, Jesus withdrew for a long conference with Gabriel and the Father Melchizedek\fnst{Elsewhere (\bibref[35:1.2]{p035 1:2}) it is said that these two are never away from Salvington at the same time. It is possible that they were not really \bibemph{away}, but were communicating with Jesus via some kind of holographic presence.}, not returning until about 18:00. When Jesus saw their anxiety over his prolonged absence, he said: \textcolour{ubdarkred}{“Why were you afraid? You well know I must be about my Father’s business; wherefore do you doubt when I am not with you? I now declare that the Son of Man has chosen to go through his full life in your midst and as one of you. Be of good cheer; I will not leave you until my work is finished.”}
 \vs p158 1:7 As they partook of their meagre evening meal, Peter asked the Master, “How long do we remain on this mountain away from our brethren?” And Jesus answered: \textcolour{ubdarkred}{“Until you shall see the glory of the Son of Man and know that whatsoever I have declared to you is true.”} And they talked over the affairs of the Lucifer rebellion while seated about the glowing embers of their fire until darkness drew on and the apostles’ eyes grew heavy, for they had begun their journey very early that morning.
-\vs p158 1:8 When the 3 had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These 3 conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
-\vs p158 1:9 The 3 apostles were so badly frightened that they were slow in collecting their wits, but Peter, who was first to recover himself, said, as the dazzling vision faded from before them and they observed Jesus standing alone: “Jesus, Master, it is good to have been here. We rejoice to see this glory. We are loath to go back down to the inglorious world. If you are willing, let us abide here, and we will erect 3 tents, one for you, one for Moses, and one for Elijah.” And Peter said this because of his confusion, and because nothing else came into his mind at just that moment.
+\vs p158 1:8 When the three had been fast asleep for about half an hour, they were suddenly awakened by a near\hyp{}by crackling sound, and much to their amazement and consternation, on looking about them, they beheld Jesus in intimate converse with two brilliant beings clothed in the habiliments of the light of the celestial world. And Jesus’ face and form shone with the luminosity of a heavenly light. These three conversed in a strange language, but from certain things said, Peter erroneously conjectured that the beings with Jesus were Moses and Elijah; in reality, they were Gabriel and the Father Melchizedek. The physical controllers had arranged for the apostles to witness this scene because of Jesus’ request.
+\vs p158 1:9 The three apostles were so badly frightened that they were slow in collecting their wits, but Peter, who was first to recover himself, said, as the dazzling vision faded from before them and they observed Jesus standing alone: “Jesus, Master, it is good to have been here. We rejoice to see this glory. We are loath to go back down to the inglorious world. If you are willing, let us abide here, and we will erect three tents, one for you, one for Moses, and one for Elijah.” And Peter said this because of his confusion, and because nothing else came into his mind at just that moment.
 \vs p158 1:10 While Peter was yet speaking, a silvery cloud drew near and overshadowed the four of them. The apostles now became greatly frightened, and as they fell down on their faces to worship, they heard a voice, the same that had spoken on the occasion of Jesus’ baptism, say: “This is my beloved Son; give heed to him.” And when the cloud vanished, again was Jesus alone with the 3, and he reached down and touched them, saying: \textcolour{ubdarkred}{“Arise and be not afraid; you shall see greater things than this.”} But the apostles were truly afraid; they were a silent and thoughtful trio as they made ready to descend the mountain shortly before midnight.
 \usection{Coming down the Mountain}
-\vs p158 2:1 For about half the distance down the mountain not a word was spoken. Jesus then began the conversation by remarking: \textcolour{ubdarkred}{“Make certain that you tell no man, not even your brethren, what you have seen and heard on this mountain until the Son of Man has risen from the dead.”} The 3 apostles were shocked and bewildered by the Master’s words, \textcolour{ubdarkred}{“until the Son of Man has risen from the dead.”} They had so recently reaffirmed their faith in him as the Deliverer, the Son of God, and they had just beheld him transfigured in glory before their very eyes, and now he began to talk about \textcolour{ubdarkred}{“rising from the dead”!}
-\vs p158 2:2 Peter shuddered at the thought of the Master’s dying --- it was too disagreeable an idea to entertain --- and fearing that James or John might ask some question relative to this statement, he thought best to start up a diverting conversation and, not knowing what else to talk about, gave expression to the first thought coming into his mind, which was: “Master, why is it that the scribes say that Elijah must first come before the Messiah shall appear?” And Jesus, knowing that Peter sought to avoid reference to his death and resurrection, answered: \textcolour{ubdarkred}{“Elijah indeed comes first to prepare the way for the Son of Man, who must suffer many things and finally be rejected. But I tell you that Elijah has already come, and they received him not but did to him whatsoever they willed.”} And then did the 3 apostles perceive that he referred to John the Baptist as Elijah. Jesus knew that, if they insisted on regarding him as the Messiah, then must John be the Elijah of the prophecy.
+\vs p158 2:1 For about half the distance down the mountain not a word was spoken. Jesus then began the conversation by remarking: \textcolour{ubdarkred}{“Make certain that you tell no man, not even your brethren, what you have seen and heard on this mountain until the Son of Man has risen from the dead.”} The three apostles were shocked and bewildered by the Master’s words, \textcolour{ubdarkred}{“until the Son of Man has risen from the dead.”} They had so recently reaffirmed their faith in him as the Deliverer, the Son of God, and they had just beheld him transfigured in glory before their very eyes, and now he began to talk about \textcolour{ubdarkred}{“rising from the dead”!}
+\vs p158 2:2 Peter shuddered at the thought of the Master’s dying --- it was too disagreeable an idea to entertain --- and fearing that James or John might ask some question relative to this statement, he thought best to start up a diverting conversation and, not knowing what else to talk about, gave expression to the first thought coming into his mind, which was: “Master, why is it that the scribes say that Elijah must first come before the Messiah shall appear?” And Jesus, knowing that Peter sought to avoid reference to his death and resurrection, answered: \textcolour{ubdarkred}{“Elijah indeed comes first to prepare the way for the Son of Man, who must suffer many things and finally be rejected. But I tell you that Elijah has already come, and they received him not but did to him whatsoever they willed.”} And then did the three apostles perceive that he referred to John the Baptist as Elijah. Jesus knew that, if they insisted on regarding him as the Messiah, then must John be the Elijah of the prophecy.
 \vs p158 2:3 Jesus enjoined silence about their observation of the foretaste of his postresurrection glory because he did not want to foster the notion that, being now received as the Messiah, he would in any degree fulfil their erroneous concepts of a wonder\hyp{}working deliverer. Although Peter, James, and John pondered all this in their minds, they spoke not of it to any man until after the Master’s resurrection.
 \vs p158 2:4 As they continued to descend the mountain, Jesus said to them: \textcolour{ubdarkred}{“You would not receive me as the Son of Man; therefore have I consented to be received in accordance with your settled determination, but, mistake not, the will of my Father must prevail. If you thus choose to follow the inclination of your own wills, you must prepare to suffer many disappointments and experience many trials, but the training which I have given you should suffice to bring you triumphantly through even these sorrows of your own choosing.”}
-\vs p158 2:5 Jesus did not take Peter, James, and John with him up to the mount of the transfiguration because they were in any sense better prepared than the other apostles to witness what happened, or because they were spiritually more fit to enjoy such a rare privilege. Not at all. He well knew that none of the twelve were spiritually qualified for this experience; therefore did he take with him only the 3 apostles who were assigned to accompany him at those times when he desired to be alone to enjoy solitary communion.
+\vs p158 2:5 Jesus did not take Peter, James, and John with him up to the mount of the transfiguration because they were in any sense better prepared than the other apostles to witness what happened, or because they were spiritually more fit to enjoy such a rare privilege. Not at all. He well knew that none of the twelve were spiritually qualified for this experience; therefore did he take with him only the three apostles who were assigned to accompany him at those times when he desired to be alone to enjoy solitary communion.
 \usection{Meaning of the Transfiguration}
 \vs p158 3:1 That which Peter, James, and John witnessed on the mount of transfiguration was a fleeting glimpse of a celestial pageant which transpired that eventful day on Mount Hermon. The transfiguration was the occasion of:
 \vs p158 3:2 \ublistelem{1.}\bibnobreakspace The acceptance of the fullness of the bestowal of the incarnated life of Michael on Urantia by the Eternal Mother\hyp{}Son of Paradise. As far as concerned the requirements of the Eternal Son, Jesus had now received assurance of their fulfilment. And Gabriel brought Jesus that assurance.
 \vs p158 3:3 \ublistelem{2.}\bibnobreakspace The testimony of the satisfaction of the Infinite Spirit as to the fullness of the Urantia bestowal in the likeness of mortal flesh. The universe representative of the Infinite Spirit, the immediate associate of Michael on Salvington and his ever\hyp{}present coworker, on this occasion spoke through the Father Melchizedek.
-\vs p158 3:4 \pc Jesus welcomed this testimony regarding the success of his earth mission presented by the messengers of the Eternal Son and the Infinite Spirit, but he noted that his Father did not indicate that the Urantia bestowal was finished; only did the unseen presence of the Father bear witness through Jesus’ Personalized Adjuster, saying, “This is my beloved Son; give heed to him.” And this was spoken in words to be heard also by the 3 apostles.
-\vs p158 3:5 After this celestial visitation Jesus sought to know his Father’s will and decided to pursue the mortal bestowal to its natural end. This was the significance of the transfiguration to Jesus. To the 3 apostles it was an event marking the entrance of the Master upon the final phase of his earth career as the Son of God and the Son of Man.
+\vs p158 3:4 \pc Jesus welcomed this testimony regarding the success of his earth mission presented by the messengers of the Eternal Son and the Infinite Spirit, but he noted that his Father did not indicate that the Urantia bestowal was finished; only did the unseen presence of the Father bear witness through Jesus’ Personalized Adjuster, saying, “This is my beloved Son; give heed to him.” And this was spoken in words to be heard also by the three apostles.
+\vs p158 3:5 After this celestial visitation Jesus sought to know his Father’s will and decided to pursue the mortal bestowal to its natural end. This was the significance of the transfiguration to Jesus. To the three apostles it was an event marking the entrance of the Master upon the final phase of his earth career as the Son of God and the Son of Man.
 \vs p158 3:6 After the formal visitation of Gabriel and the Father Melchizedek, Jesus held informal converse with these, his Sons of ministry, and communed with them concerning the affairs of the universe.
 \usection{The Epileptic Boy}
 \vs p158 4:1 It was shortly before breakfast time on this Tuesday morning when Jesus and his companions arrived at the apostolic camp. As they drew near, they discerned a considerable crowd gathered around the apostles and soon began to hear the loud words of argument and disputation of this group of about 50 persons, embracing the 9 apostles and a gathering equally divided between Jerusalem scribes and believing disciples who had tracked Jesus and his associates in their journey from Magadan.
 \vs p158 4:2 Although the crowd engaged in numerous arguments, the chief controversy was about a certain citizen of Tiberias who had arrived the preceding day in quest of Jesus. This man, James of Safed, had a son about 14 years old, an only child, who was severely afflicted with epilepsy. In addition to this nervous malady this lad had become possessed by one of those wandering, mischievous, and rebellious midwayers who were then present on earth and uncontrolled, so that the youth was both epileptic and demon\hyp{}possessed.
-\vs p158 4:3 For almost two weeks this anxious father, a minor official of Herod Antipas, had wandered about through the western borders of Philip’s domains, seeking Jesus that he might entreat him to cure this afflicted son. And he did not catch up with the apostolic party until about noon of this day when Jesus was up on the mountain with the 3 apostles.
+\vs p158 4:3 For almost two weeks this anxious father, a minor official of Herod Antipas, had wandered about through the western borders of Philip’s domains, seeking Jesus that he might entreat him to cure this afflicted son. And he did not catch up with the apostolic party until about noon of this day when Jesus was up on the mountain with the three apostles.
 \vs p158 4:4 The 9 apostles were much surprised and considerably perturbed when this man, accompanied by almost 40 other persons who were looking for Jesus, suddenly came upon them. At the time of the arrival of this group the 9 apostles, at least the majority of them, had succumbed to their old temptation --- that of discussing who should be greatest in the coming kingdom; they were busily arguing about the probable positions which would be assigned the individual apostles. They simply could not free themselves entirely from the long\hyp{}cherished idea of the material mission of the Messiah. And now that Jesus himself had accepted their confession that he was indeed the Deliverer --- at least he had admitted the fact of his divinity --- what was more natural than that, during this period of separation from the Master, they should fall to talking about those hopes and ambitions which were uppermost in their hearts. And they were engaged in these discussions when James of Safed and his fellow seekers after Jesus came upon them.
 \vs p158 4:5 Andrew stepped up to greet this father and his son, saying, “Whom do you seek?” Said James: “My good man, I search for your Master. I seek healing for my afflicted son. I would have Jesus cast out this devil that possesses my child.” And then the father proceeded to relate to the apostles how his son was so afflicted that he had many times almost lost his life as a result of these malignant seizures.
 \vs p158 4:6 As the apostles listened, Simon Zelotes and Judas Iscariot stepped into the presence of the father, saying: “We can heal him; you need not wait for the Master’s return. We are ambassadors of the kingdom; no longer do we hold these things in secret. Jesus is the Deliverer, and the keys of the kingdom have been delivered to us.” By this time Andrew and Thomas were in consultation at one side. Nathaniel and the others looked on in amazement; they were all aghast at the sudden boldness, if not presumption, of Simon and Judas. Then said the father: “If it has been given you to do these works, I pray that you will speak those words which will deliver my child from this bondage.” Then Simon stepped forward and, placing his hand on the head of the child, looked directly into his eyes and commanded: “Come out of him, you unclean spirit; in the name of Jesus obey me.” But the lad had only a more violent fit, while the scribes mocked the apostles in derision, and the disappointed believers suffered the taunts of these unfriendly critics.
 \vs p158 4:7 Andrew was deeply chagrined at this ill\hyp{}advised effort and its dismal failure. He called the apostles aside for conference and prayer. After this season of meditation, feeling keenly the sting of their defeat and sensing the humiliation resting upon all of them, Andrew sought, in a second attempt, to cast out the demon, but only failure crowned his efforts. Andrew frankly confessed defeat and requested the father to remain with them overnight or until Jesus’ return, saying: “Perhaps this sort goes not out except by the Master’s personal command.”
 \vs p158 4:8 And so, while Jesus was descending the mountain with the exuberant and ecstatic Peter, James, and John, their 9 brethren likewise were sleepless in their confusion and downcast humiliation. They were a dejected and chastened group. But James of Safed would not give up. Although they could give him no idea as to when Jesus might return, he decided to stay on until the Master came back.
 \usection{Jesus Heals the Boy}
-\vs p158 5:1 As Jesus drew near, the 9 apostles were more than relieved to welcome him, and they were greatly encouraged to behold the good cheer and unusual enthusiasm which marked the countenances of Peter, James, and John. They all rushed forward to greet Jesus and their 3 brethren. As they exchanged greetings, the crowd came up, and Jesus asked, \textcolour{ubdarkred}{“What were you disputing about as we drew near?”} But before the disconcerted and humiliated apostles could reply to the Master’s question, the anxious father of the afflicted lad stepped forward and, kneeling at Jesus’ feet, said: “Master, I have a son, an only child, who is possessed by an evil spirit. Not only does he cry out in terror, foam at the mouth, and fall like a dead person at the time of seizure, but oftentimes this evil spirit which possesses him rends him in convulsions and sometimes has cast him into the water and even into the fire. With much grinding of teeth and as a result of many bruises, my child wastes away. His life is worse than death; his mother and I are of a sad heart and a broken spirit. About noon yesterday, seeking for you, I caught up with your disciples, and while we were waiting, your apostles sought to cast out this demon, but they could not do it. And now, Master, will you do this for us, will you heal my son?”
+\vs p158 5:1 As Jesus drew near, the 9 apostles were more than relieved to welcome him, and they were greatly encouraged to behold the good cheer and unusual enthusiasm which marked the countenances of Peter, James, and John. They all rushed forward to greet Jesus and their three brethren. As they exchanged greetings, the crowd came up, and Jesus asked, \textcolour{ubdarkred}{“What were you disputing about as we drew near?”} But before the disconcerted and humiliated apostles could reply to the Master’s question, the anxious father of the afflicted lad stepped forward and, kneeling at Jesus’ feet, said: “Master, I have a son, an only child, who is possessed by an evil spirit. Not only does he cry out in terror, foam at the mouth, and fall like a dead person at the time of seizure, but oftentimes this evil spirit which possesses him rends him in convulsions and sometimes has cast him into the water and even into the fire. With much grinding of teeth and as a result of many bruises, my child wastes away. His life is worse than death; his mother and I are of a sad heart and a broken spirit. About noon yesterday, seeking for you, I caught up with your disciples, and while we were waiting, your apostles sought to cast out this demon, but they could not do it. And now, Master, will you do this for us, will you heal my son?”
 \vs p158 5:2 When Jesus had listened to this recital, he touched the kneeling father and bade him rise while he gave the near\hyp{}by apostles a searching survey. Then said Jesus to all those who stood before him: \textcolour{ubdarkred}{“O faithless and perverse generation, how long shall I bear with you? How long shall I be with you? How long ere you learn that the works of faith come not forth at the bidding of doubting unbelief?”} And then, pointing to the bewildered father, Jesus said, \textcolour{ubdarkred}{“Bring hither your son.”} And when James had brought the lad before Jesus, he asked, \textcolour{ubdarkred}{“How long has the boy been afflicted in this way?”} The father answered, “Since he was a very young child.” And as they talked, the youth was seized with a violent attack and fell in their midst, gnashing his teeth and foaming at the mouth. After a succession of violent convulsions he lay there before them as one dead. Now did the father again kneel at Jesus’ feet while he implored the Master, saying: “If you can cure him, I beseech you to have compassion on us and deliver us from this affliction.” And when Jesus heard these words, he looked down into the father’s anxious face, saying: \textcolour{ubdarkred}{“Question not my Father’s power of love, only the sincerity and reach of your faith. All things are possible to him who really believes.”} And then James of Safed spoke those long\hyp{}to\hyp{}be\hyp{}remembered words of commingled faith and doubt, “Lord, I believe. I pray you help my unbelief.”
 \vs p158 5:3 When Jesus heard these words, he stepped forward and, taking the lad by the hand, said: \textcolour{ubdarkred}{“I will do this in accordance with my Father’s will and in honour of living faith. My son, arise! Come out of him, disobedient spirit, and go not back into him.”} And placing the hand of the lad in the hand of the father, Jesus said: \textcolour{ubdarkred}{“Go your way. The Father has granted the desire of your soul.”} And all who were present, even the enemies of Jesus, were astonished at what they saw.
-\vs p158 5:4 It was indeed a disillusionment for the 3 apostles who had so recently enjoyed the spiritual ecstasy of the scenes and experiences of the transfiguration, so soon to return to this scene of the defeat and discomfiture of their fellow apostles. But it was ever so with these twelve ambassadors of the kingdom. They never failed to alternate between exaltation and humiliation in their life experiences.
+\vs p158 5:4 It was indeed a disillusionment for the three apostles who had so recently enjoyed the spiritual ecstasy of the scenes and experiences of the transfiguration, so soon to return to this scene of the defeat and discomfiture of their fellow apostles. But it was ever so with these twelve ambassadors of the kingdom. They never failed to alternate between exaltation and humiliation in their life experiences.
 \vs p158 5:5 This was a true healing of a double affliction, a physical ailment and a spirit malady. And the lad was permanently cured from that hour. When James had departed with his restored son, Jesus said: \textcolour{ubdarkred}{“We go now to Caesarea\hyp{}Philippi; make ready at once.”} And they were a quiet group as they journeyed southward while the crowd followed on behind.
 \usection{In Celsus’ Garden}
 \vs p158 6:1 They remained overnight with Celsus, and that evening in the garden, after they had eaten and rested, the twelve gathered about Jesus, and Thomas said: “Master, while we who tarried behind still remain ignorant of what transpired up on the mountain, and which so greatly cheered our brethren who were with you, we crave to have you talk with us concerning our defeat and instruct us in these matters, seeing that those things which happened on the mountain cannot be disclosed at this time.”
