--- a/tex/p173.tex
+++ b/tex/p173.tex
@@ -44,7 +44,7 @@
 \vs p173 5:1 After the scribes and rulers had withdrawn, Jesus addressed himself again to the assembled crowd and spoke the parable of the wedding feast. He said:
 \vs p173 5:2 \pc \textcolour{ubdarkred}{“The kingdom of heaven may be likened to a certain king who made a marriage feast for his son and dispatched messengers to call those who had previously been invited to the feast to come, saying, ‘Everything is ready for the marriage supper at the king’s palace.’ Now, many of those who had once promised to attend, at this time refused to come. When the king heard of these rejections of his invitation, he sent other servants and messengers, saying: ‘Tell all those who were bidden, to come, for, behold, my dinner is ready. My oxen and my fatlings are killed, and all is in readiness for the celebration of the forthcoming marriage of my son.’ But again did the thoughtless make light of this call of their king, and they went their ways, one to the farm, another to the pottery, and others to their merchandise. Still others were not content thus to slight the king’s call, but in open rebellion they laid hands on the king’s messengers and shamefully mistreated them, even killing some of them. And when the king perceived that his chosen guests, even those who had accepted his preliminary invitation and had promised to attend the wedding feast, had finally rejected his call and in rebellion had assaulted and slain his chosen messengers, he was exceedingly wroth. And then this insulted king ordered out his armies and the armies of his allies and instructed them to destroy these rebellious murderers and to burn down their city.}
 \vs p173 5:3 \textcolour{ubdarkred}{“And when he had punished those who spurned his invitation, he appointed yet another day for the wedding feast and said to his messengers: ‘They who were first bidden to the wedding were not worthy; so go now into the parting of the ways and into the highways and even beyond the borders of the city, and as many as you shall find, bid even these strangers to come in and attend this wedding feast.’ And then these servants went out into the highways and the out\hyp{}of\hyp{}the\hyp{}way places, and they gathered together as many as they found, good and bad, rich and poor, so that at last the wedding chamber was filled with willing guests. When all was ready, the king came in to view his guests, and much to his surprise he saw there a man without a wedding garment. The king, since he had freely provided wedding garments for all his guests, addressing this man, said: ‘Friend, how is it that you come into my guest chamber on this occasion without a wedding garment?’ And this unprepared man was speechless. Then said the king to his servants: ‘Cast out this thoughtless guest from my house to share the lot of all the others who have spurned my hospitality and rejected my call. I will have none here except those who delight to accept my invitation, and who do me the honour to wear those guest garments so freely provided for all.’”}
-\vs p173 5:4 \pc After speaking this parable, Jesus was about to dismiss the multitude when a sympathetic believer, making his way through the crowds toward him, asked: “But, Master, how shall we know about these things? how shall we be ready for the king’s invitation? what sign will you give us whereby we shall know that you are the Son of God?” And when the Master heard this, he said, \textcolour{ubdarkred}{“Only one sign shall be given you.”} And then, pointing to his own body, he continued, \textcolour{ubdarkred}{“Destroy this temple, and in three days I will raise it up.”} But they did not understand him, and as they dispersed, they talked among themselves, saying, “Almost 50 years has this temple been in building, and yet he says he will destroy it and raise it up in 3 days.” Even his own apostles did not comprehend the significance of this utterance, but subsequently, after his resurrection, they recalled what he had said.
+\vs p173 5:4 \pc After speaking this parable, Jesus was about to dismiss the multitude when a sympathetic believer, making his way through the crowds toward him, asked: “But, Master, how shall we know about these things? how shall we be ready for the king’s invitation? what sign will you give us whereby we shall know that you are the Son of God?” And when the Master heard this, he said, \textcolour{ubdarkred}{“Only one sign shall be given you.”} And then, pointing to his own body, he continued, \textcolour{ubdarkred}{“Destroy this temple, and in three days I will raise it up.”} But they did not understand him, and as they dispersed, they talked among themselves, saying, “Almost fifty years has this temple been in building, and yet he says he will destroy it and raise it up in three days.” Even his own apostles did not comprehend the significance of this utterance, but subsequently, after his resurrection, they recalled what he had said.
 \vs p173 5:5 About 16:00 Jesus beckoned to his apostles and indicated that he desired to leave the temple and to go to Bethany for their evening meal and a night of rest. On the way up Olivet Jesus instructed Andrew, Philip, and Thomas that, on the morrow, they should establish a camp nearer the city which they could occupy during the remainder of the Passover week. In compliance with this instruction the following morning they pitched their tents in the hillside ravine overlooking the public camping park of Gethsemane, on a plot of ground belonging to Simon of Bethany.
 \vs p173 5:6 Again it was a silent group of Jews who made their way up the western slope of Olivet on this Monday night. These twelve men, as never before, were beginning to sense that something tragic was about to happen. While the dramatic cleansing of the temple during the early morning had aroused their hopes of seeing the Master assert himself and manifest his mighty powers, the events of the entire afternoon only operated as an anticlimax in that they all pointed to the certain rejection of Jesus’ teaching by the Jewish authorities. The apostles were gripped by suspense and were held in the firm grasp of a terrible uncertainty. They realized that only a few short days could intervene between the events of the day just passed and the crash of an impending doom. They all felt that something tremendous was about to happen, but they knew not what to expect. They went to their various places for rest, but they slept very little. Even the Alpheus twins were at last aroused to the realization that the events of the Master’s life were moving swiftly toward their final culmination.
 \quizlink
